# divergence_free_correspondence

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.devcontainer/: devcontainer.json  setup_rtk.sh
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml
divergence_free_corr/: CMakeLists.txt
divergence_free_corr/include/: constants.hpp  deformation_field.hpp  features.hpp  io.hpp  matching.hpp  numerics.hpp  parallel_optimizer.hpp  run.hpp  utilities.hpp
divergence_free_corr/src/: CMakeLists.txt  deformation_field.cpp  features.cpp  io.cpp  main.cpp  matching.cpp  numerics.cpp  parallel_optimizer.cpp  run.cpp  utilities.cpp
docker/: Dockerfile_dependencies  Dockerfile_develop  build_dependencies.sh
include/: constants.hpp  deformation_field.hpp  io.hpp  numerics.hpp  utilities.hpp
scripts/: install-hooks.sh
src/: CMakeLists.txt  deformation_field.cpp  io.cpp  main.cpp  matching.cpp  maximization.cpp  numerics.cpp
tests/: CMakeLists.txt  test_numerics.cpp  test_utilities.cpp
